# issue-tracker

./: .env  README.md  docker-compose.yml
backend/: Dockerfile
backend/app/: alembic.ini  pyproject.toml
backend/app/alembic/: env.py
backend/app/alembic/versions/: 32c50050316e_init.py
backend/app/app/: main.py
backend/app/app/api/: api.py  deps.py
backend/app/app/api/endpoints/: issues.py  projects.py
backend/app/app/core/: config.py
backend/app/app/crud/: __init__.py  crud_issue.py  crud_issue_relation.py  crud_project.py
backend/app/app/db/: base.py
backend/app/app/models/: __init__.py  issue.py  project.py
backend/app/app/schemas/: __init__.py  issue.py  project.py
frontend/: .env  Dockerfile  package-lock.json  package.json  tsconfig.json  vue.config.js
frontend/public/flags/: README.md
frontend/src/: App.vue  api.ts  main.ts  shims-kanban.d.ts
frontend/src/assets/: kanban.scss
frontend/src/components/common/: BaseSnackbar.vue  LangSwitcher.vue  ThemeSwitcher.vue
frontend/src/components/issues/: IssueDetails.vue  IssueKanban.vue
frontend/src/components/projects/: ConfirmDelete.vue  ProjectHandler.vue
frontend/src/enums/: index.ts
frontend/src/interfaces/: index.ts
frontend/src/locales/: en.json  pl.json
frontend/src/plugins/: filters.ts  i18n.ts  vuetify.ts
frontend/src/router/: index.ts
frontend/src/store/: index.ts  state.ts
frontend/src/store/issues/: actions.ts  getters.ts  index.ts  mutations.ts  state.ts
frontend/src/store/main/: actions.ts  getters.ts  index.ts  (+2 more)
frontend/src/views/: Issues.vue  Projects.vue
(+5 files in other folders)
